deploy/virt-controller/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-v1alpha1-virtualmachine
  failurePolicy: Fail
  name: mutate.virtualmachine.v1alpha1.virt.virtink.smartx.com
  rules:
  - apiGroups:
    - virt.virtink.smartx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualmachines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-v1alpha1-virtualmachinereplicaset
  failurePolicy: Fail
  name: mutate.virtualmachinereplicaset.v1alpha1.virt.virtink.smartx.com
  rules:
  - apiGroups:
    - virt.virtink.smartx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualmachinereplicasets
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-v1alpha1-virtualmachine
  failurePolicy: Fail
  name: validate.virtualmachine.v1alpha1.virt.virtink.smartx.com
  rules:
  - apiGroups:
    - virt.virtink.smartx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualmachines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-v1alpha1-virtualmachinemigration
  failurePolicy: Fail
  name: validate.virtualmachinemigration.v1alpha1.virt.virtink.smartx.com
  rules:
  - apiGroups:
    - virt.virtink.smartx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualmachinemigrations
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-v1alpha1-virtualmachinereplicaset
  failurePolicy: Fail
  name: validate.virtualmachinereplicaset.v1alpha1.virt.virtink.smartx.com
  rules:
  - apiGroups:
    - virt.virtink.smartx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualmachinereplicasets
  sideEffects: None
